# Quorum

./: CLAUDE.md  README.md  config.yaml  config_hard.yaml  pyproject.toml
dataset/: expand_progress.jsonl  records.jsonl  records1.json  records_blind_v2.jsonl
docs/: PUBLICATION.md
quorum/: __init__.py  __main__.py  ablation.py  adjudicate.py  adjudicate_v2.py  baseline.py  cli.py  committee.py  dataset.py  delta.py  extract.py  generate_pairs.py  hard_benchmark.py  hard_compatible.py  import_cooperbench.py  import_semantic_records.py  metrics.py  models.py  publication.py
quorum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
results/: NEXT_PRIORITIES.md  adjudication_ablation_20260718T200307Z.json  adjudication_report_20260718T200307Z.md  adjudicator_v3_flips.json  adjudicator_v3_freeze.json  adjudicator_v3_offline.json  adjudicator_v3_offline.md  adjudicator_v3_verification.md  baseline_per_example.json  benchmark_audit.md  blind_eval_metrics.json  blind_eval_report.md  blind_raw_checkpoint.json  blind_structured_checkpoint.json  comparison_20260718T182612Z.md  compatible_error_analysis.md  complete_eval_report.json  complete_eval_report.md  difficulty_distribution.json  error_analysis.md  error_catalog.csv  error_catalog.json  final_audit_summary.md  hard_negatives_raw_checkpoint.json  hard_negatives_structured_checkpoint.json  hard_raw_checkpoint.json  hard_structured_checkpoint.json  human_review_sample.json  leakage_report.md  oracle_check.json  publication_eval_20260718T202316Z.json  publication_eval_20260719T004839Z.json  (+38 more)
(+4258 files in other folders)
