[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quorum"
version = "0.1.0"
description = "Phase 0 prototype: heterogeneous LLM committee for semantic merge conflict detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
]

[project.scripts]
quorum = "quorum.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quorum*"]
